<resources>
    <string name="app_name">Serve</string>
    <string name="lang">en</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello">Hello World, MyAndroidAppActivity!</string>
    <string name="radio_english">English</string>
    <string name="radio_hindi">हिंदी</string>
    <string name="email">EMAIL</string>
    <string name="education">Education</string>
    <string name="employement">Employement</string>
    <string name="health">Health Care Services</string>
    <string name="current_affairs">Current Affairs</string>
    <string name="charity">Charity</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="name">NAME</string>
    <string name="contact_no">CONTACT NO.</string>
    <string name="d_o_b">D.O.B</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="next">Next</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="govt_policies">Govt Policies</string>
    <string name="title_activity_maps">Map</string>
    <string name="min_8_max_12">Min 8 Max 12</string>
    <string name="double_tap">Double tap to open</string>
    <string name="books_available">Books Available</string>
    <string name="jobs_available">Jobs Available</string>
    <string name="min_max">Min 8 Max 12</string>
    <string name="textView">TextView</string>
    <string name="telephone">tel:0377778888</string>

    <string name="show">show</string>
    <string name="hide">hide</string>
    <string name="close">Close</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="failed">Failed</string>
    <string name="wantToLeave">Do you want to leave?</string>
    <string name="langKey">lang</string>
    <string name="employmentPath">employment</string>
    <string name="updated">Updated</string>
    <string name="failedToLoad">Failed to load</string>
    <string name="enterValidEmail">Enter valid email</string>
    <string name="passwordNotMatch">Password not match</string>
    <string name="authenticationFailed">Authentication failed</string>
    <string name="createUserWithEmail">Create user with email on complete</string>
    <string name="enterEmailAddress">Enter email address</string>
    <string name="enterPassword">Enter password!</string>
    <string name="reenterDetails">Please re enter your details</string>
    <string name="enterName">Enter name</string>
    <string name="pickDate">Pick a date</string>
    <string name="enterContact">Enter you contact correctly</string>
    <string name="marker">Marker</string>
</resources>