<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Main2Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/email"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/emal1"
        android:digits="abcdefghijklmnopqrstuvwxyz1234567890@."
        android:inputType="text"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/etbg"
        android:fontFamily="sans-serif-light"
        android:layout_below="@+id/email"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/pass1"
        android:layout_below="@id/emal1"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/pass2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/pass1"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/etbg"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:hint="Min 8 Max 12"
        android:maxLength="12"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:id="@+id/pass3"
        android:layout_below="@id/pass2"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="18dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/pass4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/pass3"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/etbg"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/white"
        android:hint="@string/min_8_max_12"
        android:textSize="25sp"
        android:maxLength="12"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/pass4"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:id="@+id/sgn"
        android:background="@drawable/btnbg"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:fontFamily="sans-serif-medium"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>